Closed Bug 1388921 Opened 7 years ago Closed 7 years ago

OMTP is extra crashy

Categories

(Core :: Graphics, defect)

55 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla57
Tracking Status
firefox57 --- fixed

People

(Reporter: mchang, Assigned: mchang)

References

Details

Attachments

(1 file)

When browsing with OMTP enabled, I get some crashes every couple of minutes. Can't get a stack trace for some reason though :/.
We'd allow IPC messages from the main thread to the compositor thread to resume once all async paints finished. However, this was incorrect. We don't actually want to send the compositor the transaction message until we finished syncing the textures on the client side. This patch move the logic to resume IPC transactions to when we sync all hte textures.
Attachment #8896048 - Flags: review?(matt.woodrow)
Attachment #8896048 - Flags: review?(matt.woodrow) → review+
Pushed by mchang@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/de88dfb2206a
Resume IPC Messages after we send sync textures. r=mattwoodrow
https://hg.mozilla.org/mozilla-central/rev/de88dfb2206a
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
Depends on: 1427089
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: