Bug 1388921 Resume IPC Messages after we send sync textures. r=mattwoodrow