gfx/layers/PaintThread.cpp
@@ -172,19 +172,15 @@ void
 PaintThread::FinishedLayerBatch()
 {
   MOZ_ASSERT(NS_IsMainThread());
-  RefPtr<CompositorBridgeChild> cbc;
-  if (!gfxPrefs::LayersOMTPForceSync()) {
-    cbc = CompositorBridgeChild::Get();
-  }
 
   RefPtr<PaintThread> self = this;
-  RefPtr<Runnable> task = NS_NewRunnableFunction("PaintThread::EndAsyncPainting",
-  [self, cbc]() -> void
+  RefPtr<Runnable> task = NS_NewRunnableFunction("PaintThread::EndAsyncPaintingLayer",
+  [self]() -> void
   {
-    self->EndAsyncPainting(cbc);
+    self->EndAsyncPaintingLayer();
   });
 
-  if (cbc) {
+  if (!gfxPrefs::LayersOMTPForceSync()) {
     sThread->Dispatch(task.forget());
   } else {
     SyncRunnable::DispatchToThread(sThread, task);
@@ -192,7 +188,7 @@ PaintThread::FinishedLayerBatch()
 }
 
 void
-PaintThread::EndAsyncPainting(CompositorBridgeChild* aBridge)
+PaintThread::EndAsyncPaintingLayer()
 {
   MOZ_ASSERT(IsOnPaintThread());
   // Textureclient forces a flush once we "end paint", so
@@ -203,10 +199,6 @@ PaintThread::EndAsyncPainting(CompositorBridgeChild* aBridge)
   }
 
   mDrawTargetsToFlush.Clear();
-
-  if (aBridge) {
-    aBridge->NotifyFinishedAsyncPaintLayer();
-  }
 }
 
 void
@@ -215,15 +207,20 @@ PaintThread::SynchronizePaintTextures(SyncObjectClient* aSyncObject)
   MOZ_ASSERT(NS_IsMainThread());
   MOZ_ASSERT(aSyncObject);
 
+  RefPtr<CompositorBridgeChild> cbc;
+  if (!gfxPrefs::LayersOMTPForceSync()) {
+    cbc = CompositorBridgeChild::Get();
+  }
+
   RefPtr<SyncObjectClient> syncObject(aSyncObject);
   RefPtr<PaintThread> self = this;
   RefPtr<Runnable> task = NS_NewRunnableFunction("PaintThread::SyncTextureData",
-    [self, syncObject]() -> void
+    [self, cbc, syncObject]() -> void
   {
-    self->SyncTextureData(syncObject);
+    self->SyncTextureData(cbc, syncObject);
   });
 
-  if (!gfxPrefs::LayersOMTPForceSync()) {
+  if (cbc) {
     sThread->Dispatch(task.forget());
   } else {
     SyncRunnable::DispatchToThread(sThread, task);
@@ -231,12 +228,17 @@ PaintThread::SynchronizePaintTextures(SyncObjectClient* aSyncObject)
 }
 
 void
-PaintThread::SyncTextureData(SyncObjectClient* aSyncObject)
+PaintThread::SyncTextureData(CompositorBridgeChild* aBridge,
+                             SyncObjectClient* aSyncObject)
 {
   MOZ_ASSERT(IsOnPaintThread());
   MOZ_ASSERT(aSyncObject);
 
   aSyncObject->Synchronize();
+
+  if (aBridge) {
+    aBridge->NotifyFinishedAsyncPaintTransaction();
+  }
 }
 
 void
